seq09 of the experiments